[gd_scene load_steps=10 format=2]

[ext_resource path="res://Source/Ammo/Rocket.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.74902, 0.00392157, 1 )
metallic_specular = 1.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.0313726, 0.486275, 0.164706, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.5, 2 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.306818 ), 0.0, 3.16364, 0, 0, Vector2( 0.143678, 0.570455 ), -1.33846, -1.33846, 0, 0, Vector2( 1, 0 ), -0.192657, 0.0, 0, 0 ]

[sub_resource type="SphereShape" id=8]
radius = 15.0

[node name="Rocket" type="RigidBody"]
input_ray_pickable = false
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.52192 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.47808 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.478081 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.521919 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="AutoExplodeTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="StabilzeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="BurnTimer" type="Timer" parent="."]
wait_time = 0.125
one_shot = true
autostart = true

[node name="Back_Smoke" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.12367 )
amount = 10
lifetime = 0.25
local_coords = false
mesh = SubResource( 6 )
direction = Vector3( 0, 0, -1 )
spread = 6.68
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
scale_amount_curve = SubResource( 7 )

[node name="ExplosionEfectDetector" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape" type="CollisionShape" parent="ExplosionEfectDetector"]
shape = SubResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
[connection signal="timeout" from="AutoExplodeTimer" to="." method="_on_AutoExplodeTimer_timeout"]
[connection signal="timeout" from="StabilzeTimer" to="." method="_on_StabilzeTimer_timeout"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_BurnTimer_timeout"]
